--- a/pyrnn/src/Untitled.ipynb
+++ b/pyrnn/src/Untitled.ipynb
@@ -2,68 +2,139 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-5e0ab602c0e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mlsf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadSavedCSVFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/training_data.csv.gz'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'dp' is not defined"
-     ]
-    }
-   ],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "sys.path.insert(0,\"data\")\n",
-    "try:\n",
-    "    import data_parser as dp\n",
-    "except ImportError: pass\n",
-    "\n",
-    "lsf = dp.loadSavedCSVFile('data/training_data.csv.gz')"
+    "ro, li, bi, bo, li, ro = [], [], [], [], [], []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o = list()\n",
+    "o"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on built-in function reader in module _csv:\n",
       "\n",
-      "reader(...)\n",
-      "    csv_reader = reader(iterable [, dialect='excel']\n",
-      "                            [optional keyword args])\n",
-      "        for row in csv_reader:\n",
-      "            process(row)\n",
-      "    \n",
-      "    The \"iterable\" argument can be any object that returns a line\n",
-      "    of input for each iteration, such as a file object or a list.  The\n",
-      "    optional \"dialect\" parameter is discussed below.  The function\n",
-      "    also accepts optional keyword arguments which override settings\n",
-      "    provided by the dialect.\n",
-      "    \n",
-      "    The returned object is an iterator.  Each iteration returns a row\n",
-      "    of the CSV file (which can span multiple input lines).\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "[torch.FloatTensor of size 10x2]\n",
+      " \n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "    0     0\n",
+      "[torch.FloatTensor of size 10x2]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import csv\n",
-    "help(csv.reader)\n"
+    "from random import shuffle\n",
+    "import torch\n",
+    "a = list(range(10))\n",
+    "b = list(range(10))\n",
+    "c = list(range(10))\n",
+    "# d = zip(a, b, c)\n",
+    "# shuffle(d)\n",
+    "# a,b,c = zip(*d)\n",
+    "at = torch.Tensor(a).unsqueeze(0).t()\n",
+    "bt = torch.Tensor(a).unsqueeze(0).t() \n",
+    "ct = torch.cat((at, bt), 1)\n",
+    "for i in range(10):\n",
+    "    if i+2 < 10:\n",
+    "        bt[i]= bt[i+2]\n",
+    "# print at[:8], bt[:8]\n",
+    "delay = 1\n",
+    "e = len(ct) - delay\n",
+    "# print ct, ct[:e], ct[delay:], int(torch.min(ct))\n",
+    "cn = ct.new(ct.size()).zero_()\n",
+    "cm = torch.zeros(ct.size())\n",
+    "print cn, cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roll_del2, z_del2, pitch_del2 = ([] for i in range(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[] []\n"
+     ]
+    }
+   ],
+   "source": [
+    "print roll_del2, z_del2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = [2,3,4, # ignored\n",
+    "    # ignored\n",
+    "    5,6,7]\n",
+    "print b"
    ]
   },
   {
@@ -78,21 +149,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
