fix neural net issues

--- a/pyrnn/src/Untitled.ipynb
+++ b/pyrnn/src/Untitled.ipynb
@@ -11,23 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "-0.4802  1.0887 -0.8917 -0.3863 -0.7778  0.5814\n",
+      "[torch.FloatTensor of size 1x6]\n",
+      " 0.581377506256\n"
+     ]
     }
    ],
    "source": [
-    "o = list()\n",
-    "o"
+    "a = torch.randn(1,6)\n",
+    "print a, a[0][5]"
    ]
   },
   {
